--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 
 <body>
-    <div class="bg-white">
-        <div class="px-4 sm:px-6 lg:px-8 mt-4">
-            <h2 class="text-2xl font-bold tracking-tight text-gray-900">Ombordagi barcha mahsulotlar</h2>
+<div class="bg-white" id="container">
+    <div class="px-4 sm:px-6 lg:px-8 mt-4">
+        <h2 class="text-2xl font-bold tracking-tight text-gray-900">Ombordagi barcha mahsulotlar</h2>
 
-            <div id="parent" class="mt-10 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+        <div id="parent" class="mt-10 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
 
-                <!-- Bu yerda elementlar javascript tomonidan qo'shiladi... -->
+            <!-- Bu yerda elementlar javascript tomonidan qo'shiladi... -->
 
-            </div>
         </div>
     </div>
+</div>
 
-    <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 
 </html>
