kamchiliklar tuzatildi, regex bo'yicha qo'llanma yuklandi

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </button>
                     </div>
                     <!-- Modal body -->
-                    <form class="p-4 md:p-5">
+                    <form id="form" class="p-4 md:p-5">
                         <div class="space-y-12">
                             <div class="border-b border-gray-900/10 pb-12">
                                 <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
@@ -138,7 +138,7 @@
                             <button onclick="closeForm()" type="button"
                                 class="text-sm font-semibold leading-6 text-gray-900">Bekor
                                 qilish</button>
-                            <button id="addButton" type="button"
+                            <button id="addButton" type="submit"
                                 class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Qo'shish</button>
                         </div>
                     </form>
